[package]
name = "atomic-art-upgrades"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "atomic_art_upgrades"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "^0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
solana-program = "1.16.18"
mpl-token-metadata = { version="1.11.1", features = [ "no-entrypoint" ] }
solana-security-txt = "1.1.1"

